# Photon

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  dnsdumpster.py  findSubdomains.py  install_reqs.sh  logic_error_with_or.py  photon.py  pyproject.toml  requirements.txt  test_utils.py  unit_tests.py
.github/workflows/: docker-build.yml
banner/: banner.py
core/: __init__.py  colors.py  config.py  crawler.py  flash.py  load_modules.py  metadata.py  mirror.py  parser.py  prompt.py  regex.py  requester.py  scraper.py  updater.py  user-agents.txt  utils.py  values.py  zap.py
db/: config.json  user_agents.txt
modules/: archive.py  forms.py
plugins/: __init__.py  dnsdumpster.py  dnsmap.py  exporter.py  findSubdomains.py  find_subdomains.py  wayback.py
src/photon/: photon.py
src/photon/core/: flash.py  regex.py  requester.py  updater.py  utils.py  zap.py
src/photon/plugins/: exporter.py  find_subdomains.py
